// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-include resolves one import 1`] = `
{
  "children": [
    {
      "position": Position {
        "end": {
          "column": 1,
          "line": 3,
          "offset": 21,
        },
        "indent": [
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "import",
      "value": "import ImportedComponent0 from "./foo.mdx";",
    },
    {
      "position": Position {
        "end": {
          "column": 1,
          "line": 3,
          "offset": 21,
        },
        "indent": [
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent0/>",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 3,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-include resolves two imports 1`] = `
{
  "children": [
    {
      "position": Position {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 20,
        },
        "indent": [],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "import",
      "value": "import ImportedComponent0 from "./foo.mdx";",
    },
    {
      "position": Position {
        "end": {
          "column": 1,
          "line": 5,
          "offset": 42,
        },
        "indent": [
          1,
        ],
        "start": {
          "column": 1,
          "line": 4,
          "offset": 22,
        },
      },
      "type": "import",
      "value": "import ImportedComponent1 from "./bar.mdx";",
    },
    {
      "position": Position {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 20,
        },
        "indent": [],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent0/>",
    },
    {
      "position": Position {
        "end": {
          "column": 1,
          "line": 5,
          "offset": 42,
        },
        "indent": [
          1,
        ],
        "start": {
          "column": 1,
          "line": 4,
          "offset": 22,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent1/>",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 5,
      "offset": 42,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
